--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>SmartDesk Pro</title>
         <link rel="stylesheet" href="styles.css">
         <link href="https://fonts.googleapis.com/css?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
     </head>
 
     <script>
@@ -143,3 +144,4 @@ document.addEventListener("DOMContentLoaded", () => {
 
     </body>    
 </html>
+
