--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>SmartDesk Pro</title>
+        <link rel="icon" href="favicon.ico?v=2" type="image/x-icon">
         <link rel="stylesheet" href="styles.css">
         <link href="https://fonts.googleapis.com/css?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-        <link rel="icon" href="favicon.ico" type="image/x-icon">
+       
     </head>
 
     <script>
@@ -144,4 +145,5 @@ document.addEventListener("DOMContentLoaded", () => {
 
     </body>    
 </html>
+
 
