--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>SmartDesk Pro</title>
-        <link rel="icon" href="favicon.ico?v=2" type="image/x-icon">
-        <link rel="stylesheet" href="styles.css">
-        <link href="https://fonts.googleapis.com/css?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-       
-    </head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SmartDesk Pro</title>
 
+  <!-- Favicon -->
+  <link rel="icon" href="/Smartdesk-Landing/favicon.ico?v=2" type="image/x-icon">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+</head>
     <script>
     function revealOnScroll() {
         const reveals = document.querySelectorAll(".reveal");
@@ -145,5 +147,6 @@ document.addEventListener("DOMContentLoaded", () => {
 
     </body>    
 </html>
+
 
 
