--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>SmartDesk Pro</title>
 
   <!-- Favicon -->
-  <link rel="icon" href="./favicon.ico?v=2" type="image/x-icon">
+  <link rel="icon" type="image/x-icon" href="./favicon.ico?v=2">
 
   <!-- CSS -->
   <link rel="stylesheet" href="styles.css">
@@ -147,6 +147,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
     </body>    
 </html>
+
 
 
 
